--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,9 +20,9 @@ jobs:
         python-version: [3.5,3.6,3.7]
         tf-version: [1.4.0,1.14.0,2.1.0]
 
-#        exclude:
-#          - python-version: 3.7
-            #tf-version: 1.4.0
+        exclude:
+          - python-version: 3.7
+          -  tf-version: 1.4.0
 
     steps:
 
