--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,11 +18,11 @@ jobs:
     strategy:
       matrix:
         python-version: [3.5,3.6,3.7]
-        tf-version: [1.4.0,1.14.0,2.1.0]
+        tf-version: [1.4.0,1.13.0,1.14.0,2.1.0]
 
         exclude:
           - python-version: 3.7
-          -  tf-version: 1.4.0
+          - tf-version: 1.4.0
 
     steps:
 
@@ -44,7 +44,7 @@ jobs:
         pip install -q pytest
         pip install -q pytest-cov
         pip install -q python-coveralls
-        pytest --cov=deepctr --cov-report=xml
+        pytest --cov=deepmatch --cov-report=xml
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v1.0.2
       with:
