--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,7 @@ jobs:
 
         exclude:
           - python-version: 3.7
-          - tf-version: 1.4.0
+            tf-version: 1.4.0
 
     steps:
 
