--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,9 +24,29 @@ jobs:
           - python-version: 3.7
             tf-version: 1.4.0
           - python-version: 3.7
+            tf-version: 1.9.0
+          - python-version: 3.7
+            tf-version: 1.10.0
+          - python-version: 3.7
+            tf-version: 1.11.0
+          - python-version: 3.7
+            tf-version: 1.12.0
+          - python-version: 3.7
+            tf-version: 1.13.0
+          - python-version: 3.7
             tf-version: 1.15.0
           - python-version: 3.8
             tf-version: 1.4.0
+          - python-version: 3.8
+            tf-version: 1.9.0
+          - python-version: 3.8
+            tf-version: 1.10.0
+          - python-version: 3.8
+            tf-version: 1.11.0
+          - python-version: 3.8
+            tf-version: 1.12.0
+          - python-version: 3.8
+            tf-version: 1.13.0
           - python-version: 3.8
             tf-version: 1.14.0
           - python-version: 3.8
