--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -57,14 +57,20 @@ jobs:
             tf-version: 2.8.0
           - python-version: 3.6
             tf-version: 2.9.0
+          - python-version: 3.6
+            tf-version: 2.10.0
           - python-version: 3.9
             tf-version: 1.4.0
+          - python-version: 3.9
+            tf-version: 1.9.0
           - python-version: 3.9
             tf-version: 1.15.0
           - python-version: 3.9
             tf-version: 1.14.0
           - python-version: 3.10.7
             tf-version: 1.4.0
+          - python-version: 3.10.7
+            tf-version: 1.9.0
           - python-version: 3.10.7
             tf-version: 1.15.0
           - python-version: 3.10.7
