--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -76,6 +76,8 @@ jobs:
           - python-version: 3.10.7
             tf-version: 1.14.0
           - python-version: 3.10.7
+            tf-version: 2.5.0
+          - python-version: 3.10.7
             tf-version: 2.6.0
 
     steps:
