--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,7 @@ jobs:
     timeout-minutes: 120
     strategy:
       matrix:
-        python-version: [3.6,3.7,3.8]
+        python-version: [3.6,3.7,3.8,3.9,3.10.7]
         tf-version: [1.9.0,1.14.0,2.5.0]
 
         exclude:
@@ -57,12 +57,28 @@ jobs:
             tf-version: 2.8.0
           - python-version: 3.6
             tf-version: 2.9.0
+          - python-version: 3.6
+            tf-version: 2.10.0
           - python-version: 3.9
             tf-version: 1.4.0
           - python-version: 3.9
+            tf-version: 1.9.0
+          - python-version: 3.9
             tf-version: 1.15.0
           - python-version: 3.9
-            tf-version: 2.2.0
+            tf-version: 1.14.0
+          - python-version: 3.10.7
+            tf-version: 1.4.0
+          - python-version: 3.10.7
+            tf-version: 1.9.0
+          - python-version: 3.10.7
+            tf-version: 1.15.0
+          - python-version: 3.10.7
+            tf-version: 1.14.0
+          - python-version: 3.10.7
+            tf-version: 2.5.0
+          - python-version: 3.10.7
+            tf-version: 2.6.0
 
     steps:
 
@@ -75,6 +91,7 @@ jobs:
 
     - name: Install dependencies
       run: |
+        sudo apt update && sudo apt install -y pkg-config libhdf5-dev
         pip3 install -q tensorflow==${{ matrix.tf-version }}
         pip install -q protobuf==3.19.0
         pip install -q requests
